--- a/ComparingSequences.qmd
+++ b/ComparingSequences.qmd
@@ -1445,6 +1445,347 @@ all_twi <- rbind(calc_props(routes_w3, "W3"),
 ```
 
 # Paper Figures
+## Figure 1: Maps of watersheds
+```{r W3-map}
+#map of watershed 3 with depth to bedrock
+hillshade_out <- "./w3_dems/1mdem_hillshade.tif"
+hill <- rast(hillshade_out)
+
+#dem
+dem <- "./HB/1m hydro enforced DEM/dem1m.tif"
+m1 <- rast(dem)
+
+ybounds <- c(4870350,4871350)
+xbounds <- c(281350, 282150)
+#crop to rectangular area
+crop1 <- crop(m1, ext(c(xbounds, ybounds)))
+#writeRaster(crop1, "1mdemw3_cropped.tif")
+
+#watershed boundary
+w3_shed <- "./w3_dems/w3_shed.tif"
+w3_outline <- as.polygons(rast(w3_shed), extent=FALSE)
+
+#w3 network- thing I need to change
+#read in shapefile of stream converted in ARC
+vect_stream_path <- "./AGU24posterAnalysis/vector_stream/vector_stream.shp"
+#stream as a vector
+vect_stream <- vect(vect_stream_path)
+plot(vect_stream)
+#crop to watershed boundary
+w3_stream_crop <- crop(vect_stream, w3_outline)
+plot(w3_stream_crop)
+#or i could use old classification
+
+#point locations- snapped points from above chunk
+w3_stic_locs_snap <- "w3_stic_locs_snap.shp"
+
+w3_stic_locs_r <- vect(w3_stic_locs_snap) %>% 
+  left_join(pks_w3, by = "ID")
+
+
+
+w3_stic_locs_r <- vect(w3_stic_locs_snap)
+#writeVector(w3_stic_locs_r, "./seismic_map_exports/w3_stic_locs_snap.shp")
+
+
+w3_net <- vect("./carrieZigZag/w3_network.shp")
+#writeVector(w3_net, "./seismic_map_exports/network.shp")
+
+plot(w3_net)
+
+
+ggplot()+
+  geom_spatraster(data = hill)+
+  theme_void()+
+  #theme(legend.position = "")+
+  scale_fill_gradientn(colors = c("black", "gray9", "gray48","lightgray", "white"))+
+    new_scale_fill() +
+  geom_spatraster(data = crop1, alpha = 0.5)+
+     scale_fill_hypso_c(palette = "dem_screen" , limits = c(200, 1000))
+
+#test <- 
+  ggplot()+
+  geom_spatraster(data = hill)+
+  theme_void()+
+  #theme(legend.position = "")+
+  scale_fill_gradientn(colors = c("black", "gray9", "gray48","lightgray", "white"))+
+    new_scale_fill() +
+  geom_spatraster(data = crop1, alpha = 0.5)+
+  geom_sf(data = w3_outline, fill = NA, color = "#FFD166", alpha = 0.3, lwd = 2)+
+  geom_sf(data = w3_net, colour = "darkslategray3", lwd = 2) +
+  geom_sf(data = w3_stic_locs_r, colour = "midnightblue", size = 2) +
+  #geom_sf(data = dd, aes(color = (depth)), pch = 19, size = 3) +
+  scale_color_gradient(low = "black", high = "white")+
+  #geom_sf(data = w3_pour, colour = "black") +
+   scale_fill_hypso_c(palette = "dem_screen" , limits = c(200, 1000))+
+  theme(rect = element_rect(fill = "transparent", color = NA))+
+  ggspatial::annotation_scale(location = 'tr', pad_x = unit(1, "cm"), 
+                              pad_y = unit(1, "cm"))
+
+
+```
+```{r FB-map}
+#read in DEM of whole valley, 1m resolution
+dem <- "./HB/1m hydro enforced DEM/dem1m.tif"
+m1 <- rast(dem)
+
+#define the rectangular area that will be shown on final map
+ybounds <- c(4868850,4869650)
+xbounds <- c(279350, 280450)
+
+#create a SpatExtent from a vector (length=4; order=xmin, xmax, ymin, ymax)
+points(lcc)
+crop1 <- crop(m1, ext(c(xbounds, ybounds)))
+#save cropped 1m dem to reduce processing time below, and gurantee that everything has the same extent
+#writeRaster(crop1, "./fb_dems/1mdem_crop.tif", overwrite = TRUE)
+#read in cropped dem
+fb_crop <- "./fb_dems/1mdem_crop.tif"
+
+#read in shapefile of stream network shape from ARC file on windows computer
+fb_net <- vect("./carrieZigZag/FB_network.shp")
+
+###pour point to define where the watershed boundary is
+#manually type coords from windows computer
+fb_pour_coords <- data.frame("easting" = 280400,
+                             "northing" = 4869120)
+#convert to SpatVector object
+fb_pour <- vect(fb_pour_coords,
+                geom = c("easting", "northing"),
+                   crs = crs(m1))
+#snap pour point to make sure it lies on flowlines
+#fb_pour <- snap(fb_pour, fb_net, tol = 1)
+
+#save to file for use in whitebox functions
+fb_pour_filename <- "./fb_dems/fb_pour.shp"
+#writeVector(fb_pour, fb_pour_filename, overwrite=TRUE)
+
+####delineate watershed and keep watershed boundary
+#breach and fill I guess
+b_crop <- "./fb_dems/1mdem_crop.tif"
+
+fb_breached <- "./fb_dems/1mdem_breach.tif"
+# wbt_breach_depressions_least_cost(
+#   dem = fb_crop,
+#   output = fb_breached,
+#   dist = 1,
+#   fill = TRUE)
+
+fb_filled <- "./fb_dems/1mdem_fill.tif"
+# wbt_fill_depressions_wang_and_liu(
+#   dem = fb_breached,
+#   output = fb_filled
+# )
+#calculate flow accumulation and direction
+fb_flowacc <- "./fb_dems/1mdem_fb_flowacc.tif"
+# wbt_d8_flow_accumulation(input = fb_filled,
+#                          output = fb_flowacc)
+# plot(rast(fb_flowacc))
+fb_d8pt <- "./fb_dems/1mdem_fb_d8pt.tif"
+# wbt_d8_pointer(dem = fb_filled,
+#                output = fb_d8pt)
+# plot(rast(fb_d8pt))
+
+
+#delineate streams
+fb_streams <- "./fb_dems/fb_streams.tif"
+# wbt_extract_streams(flow_accum = fb_flowacc,
+#                     output = fb_streams,
+#                     threshold = 8000)
+# plot(rast(fb_streams))
+# points(lcc)
+#snap pour point to streams
+fb_pour_snap <- "./fb_dems/fb_pour_snap.shp"
+# wbt_jenson_snap_pour_points(pour_pts = fb_pour_filename,
+#                             streams = fb_streams,
+#                             output = fb_pour_snap,
+#                             snap_dist = 10)
+fb_pour_snap_read <- vect("./fb_dems/fb_pour_snap.shp")
+
+fb_shed <- "./fb_dems/fb_shed.tif"
+# wbt_watershed(d8_pntr = fb_d8pt,
+#               pour_pts = fb_pour_snap,
+#               output = fb_shed)
+
+#convert raster of watershed area to vector for final mapping
+fb_outline <- as.polygons(rast(fb_shed), extent=FALSE)
+
+#get sensor locations from STIC data, format
+locs <- data_23 %>% 
+  filter(wshed == "FB") %>% 
+  select(ID, lat, long) %>% 
+  unique()
+#convert STIC data to a SpatVector data format
+locs_shape <- vect(locs, 
+                   geom=c("long", "lat"), 
+                   crs = "+proj=longlat +datum=WGS84")
+#reproject coordinates from WGS84 to NAD83 19N, which is the projection of raster
+lcc <- terra::project(locs_shape, crs(m1))
+
+#assign destination for hillshade calculation
+hillshade_out <- "./fb_dems/1mdem_hillshade.tif"
+# wbt_hillshade(
+#   dem = fb_crop,
+#   output = hillshade_out,
+# )
+hill <- rast(hillshade_out)
+
+#final plot with cropped hillshade and dem, STIC locations, watershed boundary, and stream network.
+#fb_map <- 
+  ggplot()+
+  geom_spatraster(data = hill)+
+  theme_void()+
+  theme(legend.position = "")+
+  scale_fill_gradientn(colors = c("black", "gray9", "gray48","lightgray", "white"))+
+    new_scale_fill() +
+  geom_spatraster(data = crop1, alpha = 0.5)+
+    geom_sf(data = fb_outline, fill = NA, color = "#397367", alpha = 0.3, lwd = 2) +
+  geom_sf(data = fb_net, colour = "darkslategray3", lwd = 2) +
+    geom_sf(data = lcc, colour = "midnightblue", pch = 19, size = 2) +
+  #geom_sf(data = fb_pour, colour = "black", pch = 8, size = 3) +
+   scale_fill_hypso_c(palette = "dem_screen", limits = c(200, 1000))+
+  theme(rect = element_rect(fill = "transparent", color = NA))+
+  ggspatial::annotation_scale(location = 'tr', pad_x = unit(1, "cm"), 
+                              pad_y = unit(1, "cm"))
+
+```
+```{r ZZ-map}
+#map for ZZ
+#read in DEM of whole valley, 1m resolution
+dem <- "./HB/1m hydro enforced DEM/dem1m.tif"
+m1 <- rast(dem)
+#plot(m1)
+
+#get sensor locations from STIC data, format
+locs <- data_23 %>% 
+  filter(wshed == "ZZ") %>% 
+  select(ID, lat, long) %>% 
+  unique()
+#convert STIC data to a SpatVector data format
+locs_shape <- vect(locs, 
+                   geom=c("long", "lat"), 
+                   crs = "+proj=longlat +datum=WGS84")
+#plot(locs_shape)
+#reproject coordinates from WGS84 to NAD83 19N, which is the projection of raster
+lcc <- terra::project(locs_shape, crs(m1))
+#plot(lcc)
+#define the rectangular area that will be shown on final map
+ybounds <- c(4866400,4867500)
+xbounds <- c(277200, 277650)
+#plot(m1, xlim = xbounds, ylim = ybounds)
+#points(lcc)
+
+#create a SpatExtent from a vector (length=4; order=xmin, xmax, ymin, ymax)
+crop1 <- crop(m1, ext(c(xbounds, ybounds)))
+#plot(crop1)
+#save cropped 1m dem to reduce processing time below, and gurantee that everything has the same extent
+#writeRaster(crop1, "./zz_dems/1mdem_crop.tif", overwrite = TRUE)
+#read in cropped dem
+zz_crop <- "./zz_dems/1mdem_crop.tif"
+
+#read in shapefile of stream network shape from ARC file on windows computer
+zz_net <- vect("./carrieZigZag/zigzag_streams.shp")
+#plot(zz_net)
+
+###pour point to define where the watershed boundary is
+#manually type coords from windows computer
+
+
+zz_pour_coords <- data.frame("easting" = 277280.45,
+                             "northing" = 4867436.45)
+#convert to SpatVector object
+zz_pour <- vect(zz_pour_coords,
+                geom = c("easting", "northing"),
+                   crs = crs(m1))
+#snap pour point to make sure it lies on flowlines
+#fb_pour <- snap(fb_pour, fb_net, tol = 1)
+
+#save to file for use in whitebox functions
+zz_pour_filename <- "./zz_dems/zz_pour.shp"
+#writeVector(zz_pour, zz_pour_filename, overwrite=TRUE)
+
+####delineate watershed and keep watershed boundary
+#breach and fill I guess
+zz_crop <- "./zz_dems/1mdem_crop.tif"
+
+zz_breached <- "./zz_dems/1mdem_breach.tif"
+
+
+zz_filled <- "./zz_dems/1mdem_fill.tif"
+# wbt_fill_depressions_wang_and_liu(
+#   dem = zz_breached,
+#   output = zz_filled
+# )
+#calculate flow accumulation and direction
+zz_flowacc <- "./zz_dems/1mdem_zz_flowacc.tif"
+# wbt_d8_flow_accumulation(input = zz_filled,
+#                          output = zz_flowacc)
+#plot(rast(zz_flowacc))
+zz_d8pt <- "./zz_dems/1mdem_zz_d8pt.tif"
+# wbt_d8_pointer(dem = zz_filled,
+#                output = zz_d8pt)
+#plot(rast(zz_d8pt))
+
+
+#delineate streams
+zz_streams <- "./zz_dems/zz_streams.tif"
+# wbt_extract_streams(flow_accum = zz_flowacc,
+#                     output = zz_streams,
+#                     threshold = 8000)
+# plot(rast(zz_streams))
+# points(lcc)
+#snap pour point to streams
+zz_pour_snap <- "./zz_dems/zz_pour_snap.shp"
+# wbt_jenson_snap_pour_points(pour_pts = zz_pour_filename,
+#                             streams = zz_streams,
+#                             output = zz_pour_snap,
+#                             snap_dist = 10)
+zz_pour_snap_read <- vect("./zz_dems/zz_pour_snap.shp")
+# plot(rast(zz_streams), 
+#      xlim = c(280200, 280410),
+#      ylim = c(4869300, 4869000))
+# points(zz_pour_snap_read, pch = 1)
+
+zz_shed <- "./zz_dems/zz_shed.tif"
+# wbt_watershed(d8_pntr = zz_d8pt,
+#               pour_pts = zz_pour_snap,
+#               output = zz_shed)
+
+#plot(rast(zz_shed))
+#convert raster of watershed area to vector for final mapping
+zz_outline <- as.polygons(rast(zz_shed), extent=FALSE)
+#plot(zz_outline)
+
+
+
+#assign destination for hillshade calculation
+hillshade_out <- "./zz_dems/1mdem_hillshade.tif"
+# wbt_hillshade(
+#   dem = zz_crop,
+#   output = hillshade_out,
+# )
+hill <- rast(hillshade_out)
+#plot(hill)
+#final plot with cropped hillshade and dem, STIC locations, watershed boundary, and stream network.
+#zz_map <- 
+  ggplot()+
+  geom_spatraster(data = hill)+
+  theme_void()+
+  theme(legend.position = "")+
+  scale_fill_gradientn(colors = c("black", "gray9", "gray48","lightgray", "white"))+
+    new_scale_fill() +
+  geom_spatraster(data = crop1, alpha = 0.5)+
+    geom_sf(data = zz_outline, fill = NA, color = "#7E6B8F", alpha = 0.3, lwd = 2) +
+  geom_sf(data = zz_net, colour = "darkslategray3", lwd = 2) +
+    geom_sf(data = lcc, colour = "midnightblue", pch = 19, size = 2) +
+  #geom_sf(data = zz_pour, colour = "black", pch = 8, size = 3) +
+   scale_fill_hypso_c(palette = "dem_screen", limits = c(200, 1000))+
+  theme(rect = element_rect(fill = "transparent", color = NA))+
+  ggspatial::annotation_scale(location = 'tr', pad_x = unit(1, "cm"), 
+                              pad_y = unit(1, "cm"))
+
+
+```
+
 ## Figure 2: Vignettes of network wetting and drying
 Chunk below copied from mapsForStoryboard.qmd, from section where I was determining times when the network went from fully dry to fully wet.
 ```{r W3-flowing-states}
@@ -1627,11 +1968,104 @@ scale_x_continuous(breaks=c(ymd_hms("2023-10-20 00:00:00"),
 
 ```
 ```{r W3-map-panels}
+#create a template for maps, then plot the flowing state at different timesteps on the template
+#map of watershed 3 with depth to bedrock
+hillshade_out <- "./w3_dems/1mdem_hillshade.tif"
+#hill <- rast(hillshade_out)
+
+#dem
+dem <- "./HB/1m hydro enforced DEM/dem1m.tif"
+m1 <- rast(dem)
+
+ybounds <- c(4870350,4871350)
+xbounds <- c(281350, 282150)
+#crop to rectangular area
+crop1 <- crop(m1, ext(c(xbounds, ybounds)))
+#writeRaster(crop1, "1mdemw3_cropped.tif")
+
+#watershed boundary
+w3_shed <- "./w3_dems/w3_shed.tif"
+w3_outline <- as.polygons(rast(w3_shed), extent=FALSE)
+
+#w3 network- thing I need to change
+#read in shapefile of stream converted in ARC
+vect_stream_path <- "./AGU24posterAnalysis/vector_stream/vector_stream.shp"
+#stream as a vector
+vect_stream <- vect(vect_stream_path)
+#plot(vect_stream)
+#crop to watershed boundary
+w3_stream_crop <- crop(vect_stream, w3_outline)
+#plot(w3_stream_crop)
+#or i could use old classification
+
+#point locations- snapped points from above chunk
+w3_stic_locs_snap <- "w3_stic_locs_snap.shp"
+
+w3_stic_locs_r <- vect(w3_stic_locs_snap) %>% 
+  left_join(pks_w3, by = "ID")
+
+
+
+w3_stic_locs_r <- vect(w3_stic_locs_snap)
+#writeVector(w3_stic_locs_r, "./seismic_map_exports/w3_stic_locs_snap.shp")
+
+
+w3_net <- vect("./carrieZigZag/w3_network.shp")
+#writeVector(w3_net, "./seismic_map_exports/network.shp")
+
+#plot(w3_net)
+
+
+#test <- 
+ggplot()+
+  geom_spatraster(data = hill)+
+  theme_void()+
+  theme(legend.position = "")+
+  scale_fill_gradientn(colors = c("black", "gray9", "gray48","lightgray", "white"))+
+    new_scale_fill() +
+  geom_spatraster(data = crop1, alpha = 0.5)+
+  geom_sf(data = w3_outline, fill = NA, color = "#FFD166", alpha = 0.3, lwd = 2)+
+  geom_sf(data = w3_net, colour = "darkslategray3", lwd = 2) +
+  geom_sf(data = w3_stic_locs_r, colour = "midnightblue", size = 2) +
+  #geom_sf(data = dd, aes(color = (depth)), pch = 19, size = 3) +
+  scale_color_gradient(low = "black", high = "white")+
+  #geom_sf(data = w3_pour, colour = "black") +
+   scale_fill_hypso_c(palette = "dem_screen" , limits = c(200, 1000))+
+  theme(rect = element_rect(fill = "transparent", color = NA))+
+  ggspatial::annotation_scale(location = 'tr', pad_x = unit(1, "cm"), 
+                              pad_y = unit(1, "cm"))
+  
+# determine the flowing state
+doi <- c(ymd_hms("2023-10-20 00:00:00"),
+                            ymd_hms("2023-10-21 00:00:00"),
+                            ymd_hms("2023-10-22 00:00:00"),
+                            ymd_hms("2023-10-23 00:00:00"),
+                            ymd_hms("2023-10-24 00:00:00"))
+  
+states <- input_w3 %>% 
+    filter(datetime %in% doi[5])
+
+#w3_stic_locs_r %>% left_join(states, by = "ID")
+
+ggplot()+
+  theme_void()+
+  geom_sf(data = w3_outline, fill = NA, color = "#FFD166", alpha = 0.3, lwd = 2)+
+  geom_sf(data = w3_net, colour = "grey", lwd = 1) +
+   
+geom_sf(data = w3_stic_locs_r %>% inner_join(states, by = "ID"), 
+        aes(fill = as.character(binary)), size = 4, pch = 21) +
+  scale_fill_manual(values = c("white", "black"),
+                    labels = c("dry", "flowing"),
+                    name = "")+
+  theme(rect = element_rect(fill = "transparent", color = NA))+#,
+        #legend.position = "")+
+  ggspatial::annotation_scale(location = 'tr', pad_x = unit(0, "cm"),
+                              pad_y = unit(1, "cm"))
 
 ```
 
 
-## Figure 7: Distributions of proportion of transitions that follow a sequence
+## Figure 5: Distributions of proportion of transitions that follow a sequence
 Distributions of prop values, with dashed lines for median, faceted by timescale and watershed, colored by method for determining sequence
 ```{r combine-and-plot}
 four_colors <- c("#231f20", "#bb4430", "#7ebdc2", "#f3dfa2")
